--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Tasks#index</h1>
-<p>Find me in app/views/tasks/index.html.erb</p>
+<h1>Here are all your current tasks:</h1>
+<% if @tasks %>
+  <% @tasks.each do |task| %>
+     <li>
+        <%= task.done ? "[X]" : "[  ]" %>
+        <%= task.name %>
+        <%= link_to "edit", edit_task_path(task) %>
+      </li>
+  <% end %>
+<% else %>
+  <p>You have no tasks go out and enjoy the day</p>
+<% end %>
