--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,15 @@
-<%= form_for(@task) do |f| %>
-  <%= f.label "Task name:" %>
-  <%= f.text_field :name %>
-  <%= f.label "Is this task done?" %>
-  <%= f.check_box :done %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-3">
+      <%= bootstrap_form_for(@task) do |f| %>
+    <!--     <%= f.label "Task name:" %> -->
+        <%= f.text_field :name %>
+<!--         <%= f.label "Is this task done?" %> -->
+        <%= f.check_box :done %>
+        <br>
+        <%= f.submit %>
+      <% end %>
+    </div>
+  </div>
+</div>
+
