--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,17 @@
-<h1>Task:</h1>
-<p><%= @task.done ? "[X]" : "[  ]" %> <%= @task.name %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-3">
+      <h1>Task:</h1>
+      <p><%= @task.done ? "[x]" : "[_]" %> <%= @task.name %></p>
+      <p>This task was created on <%= @task.created_at %></p>
 
-<%= link_to "Delete", tasks_path(@task),
-      method: :delete,
-      data: { confirm: "Are you sure?" } %>
+      <%= link_to "Edit", edit_task_path(@task), class: "btn btn-primary" %>
+      <%= link_to "Delete", task_path(@task),
+            method: :delete,
+            data: { confirm: "Are you sure?" },
+            class: "btn btn-primary" %>
+      <%= link_to "See all tasks", tasks_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
+
